--- a/7-Vorlage_vChristophe/sites/formular.html
+++ b/7-Vorlage_vChristophe/sites/formular.html
@@ -30,7 +30,7 @@
   <div class="row">
     <div class="input-field col s12">
       <i class="material-icons prefix">format_color_reset</i>
-      <input id="tank" type="number" class="validate" min="0" max="100" step="1" value="">
+      <input id="tank" type="text" class="validate" value="">
       <label class="active" for="tank">Tank</label>
     </div>
     <input id="id" name="id" type="hidden" value="">
